--- a/resources/html/Introduction.html
+++ b/resources/html/Introduction.html
@@ -5,6 +5,26 @@
         <style></style>
     </head>
     <body>
+        <!--
+        Description of the application
+Purpose of the application
+
+Users task for the purpose of a demonstration of the application
+Make a 
+
+
+Remote corpus can be viewed but not modified.
+To add or edit a local copy must be made.
+
+Task: from remote corpus tree to the local corpus tree.
+
+Resources can be added to sessions, in order to do this the local directory containing your working files needs to be added in the local directory tree.
+
+Task: via the mouse menu in the local directory tree add the directory containing the archivable  files.
+
+-->
+        
+        
         <b>Linorg is a local metadata organising tool for researchers.</b><br>
         Corpus can be cached locally and new data added while off line.<br>
         This application is still in development so some areas are incomplete.<br>
@@ -31,7 +51,7 @@
                 <br>
             </li>
             <li>
-                cache a remote corpus localy<br>
+                cache a remote corpus locally<br>
                 if the branch has not been loaded then it may take some tome to load<br>
                 also note that , preferably one without too many nodes within it
                 copy a remote branch locally<br>                
@@ -59,5 +79,7 @@
                 <br>
             </li>
         </ol>
+        <a href="Features.html">List of current features</a>
+        <!--<a href="testinglist.csv">Test this application on your platform</a>-->
     </body>
 </html>
