Updated the html text used in the application. Corrected the display of loose image files in the table.

--- a/resources/html/About.html
+++ b/resources/html/About.html
@@ -11,8 +11,11 @@
     </head>
     <body>
         <b>Linorg</b><br>
-        Linorg is an off line metadata organising tool for researchers.<br>
-        <a href="Introduction.html">Introduction</a><br>
-        <a href="Features.html">List of current features</a><br>
+        Linguistic Organiser<br>
+        A local tool for organising linguistic data.<br>
+        Max Planck Institute for Psycholinguistics<br>
+        <!--Linorg is an off line metadata organising tool for researchers.<br>-->
+        <!--<a href="Introduction.html">Introduction</a><br>
+        <a href="Features.html">List of current features</a><br>-->
     </body>
 </html>
