--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -10,14 +10,33 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        The following features will be available in the initial version.<br>
-        tree building<br>
-        corpus editing<br>
-        session editing<br>
-        limited adding resources<br>
-        <!--use of templates?<br>-->
-        creation of off line cache<br>
-        saving changes to an IMDI file<br>
-        saving newly created IMDI files (depends on imdi.api functionality)<br>            
+        <b>The following features are functional</b><br>
+        <ul>
+            <li>Creating an off line cache of a corpus (downloading from a server)</li>
+            <li>Creation of Corpus nodes</li>
+            <li>Creation of Session nodes</li>
+            <li>Editing of values in a Corpus node</li>
+            <li>Editing of values in a Session node</li>
+            <li>Adding multiple subsections to a Session i.e. adding additional Actors</li>
+            <li>Saving of Corpus nodes</li>
+            <li>Saving of Session nodes</li>
+            <li>Dragging from the trees to tables and between tables</li>
+            <li>Copy text from a table in CSV format</li>
+            <li>Highlighting matching text in a table</li>
+            <li>Selecting matching rows in a table</li>
+            <li>Editing views on a table</li>
+            <li>Saving views and setting the default view</li>
+        </ul>
+        <br>        
+        <b>The following are known issues and areas under development</b><br>
+        <ul>    
+            <li>The integration with Lamus has not yet begun so it is recommended to limit work to new corpus trees. Rather than editing files that already exist in a Corpus on the server</li>
+            <!--<li>Resource images are not displayed when the application opens and remembers the previous windows.</li>-->
+            <li>Keys are not yet fully displayed</li>
+            <li>Sections of a session that have multiple elements are not formatted consistently</li>
+            <li>Resource files cannot yet be added to a session</li>
+        </ul>
+        <br>
+        <br>
     </body>
 </html>
