--- a/resources/html/Introduction.html
+++ b/resources/html/Introduction.html
@@ -79,7 +79,7 @@ Task: via the mouse menu in the local directory tree add the directory containin
                 <br>
             </li>
         </ol>
-        <a href="Features.html">List of current features</a>
+        <!--<a href="Features.html">List of current features</a>-->
         <!--<a href="testinglist.csv">Test this application on your platform</a>-->
     </body>
 </html>
