Updated features list.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -26,15 +26,22 @@
             <li>Selecting matching rows in a table</li>
             <li>Editing views on a table</li>
             <li>Saving views and setting the default view</li>
+            <li>Preview of images (other media in progress)</li>
+            <li>Keys are displayed with the user set name</li>
         </ul>
         <br>        
         <b>The following are known issues and areas under development</b><br>
-        <ul>    
+        <ul>
             <li>The integration with Lamus has not yet begun so it is recommended to limit work to new corpus trees. Rather than editing files that already exist in a Corpus on the server</li>
             <!--<li>Resource images are not displayed when the application opens and remembers the previous windows.</li>-->
-            <li>Keys are not yet fully displayed</li>
             <li>Sections of a session that have multiple elements are not formatted consistently</li>
             <li>Resource files cannot yet be added to a session</li>
+            <li>Preview of media files will only display jpg files at this stage</li>
+            <li>Webstart occasionally gives an error that it can't find jar files when the internet connection is slow</li>
+            <li>Save changes on exit and from file menu needs to be added</li>
+            <li>Adding a node reloads sibling nodes without saving any changes</li>
+            <li>Multiple fields with the same name will not all be shown</li>
+            <li>The multi line fields cannot be easily edited yet</li>
         </ul>
         <br>
         <br>
