Added to the features/bugs list.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -28,6 +28,8 @@
             <li>Saving views and setting the default view</li>
             <li>Preview of images (other media in progress)</li>
             <li>Keys are displayed with the user set name</li>
+            <li>Enabled the file save menu</li>
+            <li>Added check before closing for unsaved changes</li>
         </ul>
         <br>        
         <b>The following are known issues and areas under development</b><br>
