Corrected separate errors when removing working directories and corpus links.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -32,6 +32,12 @@
             <li>Added check before closing for unsaved changes</li>
         </ul>
         <br>        
+        <b>The following bugs have been recently resolved</b><br>
+        <ul>            
+            <li>When there is no network local imdi files will be loaded as a priority</li>
+            <li>Corrected separate errors when removing working directories and corpus links</li>
+        </ul>
+        <br>        
         <b>The following are known issues and areas under development</b><br>
         <ul>
             <li>The integration with Lamus has not yet begun so it is recommended to limit work to new corpus trees. Rather than editing files that already exist in a Corpus on the server</li>
