Updated the features/bugs list.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -26,10 +26,12 @@
             <li>Selecting matching rows in a table</li>
             <li>Editing views on a table</li>
             <li>Saving views and setting the default view</li>
-            <li>Preview of images (other media in progress)</li>
+            <li>Preview of jpeg files (other media in progress)</li>
             <li>Keys are displayed with the user set name</li>
             <li>Enabled the file save menu</li>
             <li>Added check before closing for unsaved changes</li>
+            <li>When a node has been edited and not save to disk it will have a red exclamation mark in front of its icon</li>
+            <li>When a node is different to the version on the server it will have a blue exclamation mark in front of its icon</li>
         </ul>
         <br>        
         <b>The following bugs have been recently resolved</b><br>
@@ -41,6 +43,7 @@
         <b>The following are known issues and areas under development</b><br>
         <ul>
             <li>The integration with Lamus has not yet begun so it is recommended to limit work to new corpus trees. Rather than editing files that already exist in a Corpus on the server</li>
+            <li>The function to export for use in Lamus is not yet present </li>
             <!--<li>Resource images are not displayed when the application opens and remembers the previous windows.</li>-->
             <li>Sections of a session that have multiple elements are not formatted consistently</li>
             <li>Resource files cannot yet be added to a session</li>
@@ -50,6 +53,24 @@
             <li>Adding a node reloads sibling nodes without saving any changes</li>
             <li>Multiple fields with the same name will not all be shown</li>
             <li>The multi line fields cannot be easily edited yet</li>
+            <li>Search has been disabled because it will be revamped in the near future</li>
+            <li>Table column width is not always set correctly</li>
+            <li>The right click menu is about to be updated which will populate the edit menu and add copy paste functions where applicable</li>
+            <li>Copy / paste of existing node elements is note yet implemented</li>
+            <li>Undo / redo functionality is not yet available</li>
+            <li>A number of mouse actions currently cannot be done on multiple selections</li>
+            <li>Hide / show hidden files in the working directory</li>
+            <li>When adding or remove local directory and few other situations, the tree branches will close</li>
+            <li>When adding nodes the new nodes will not always be displayed immediately</li>
+            <li>On Mac the internal windows can be slow when dragged around</li>
+            <li>In the resource preview window the row selection of the table is not yet synchronised with the preview items</li>
+            <li>The table columns are not yet ordered correctly by default</li>
+            <li>Keyboard short cuts for add session etc. has not yet been added</li>
+            <li>Controlled vocabularies displayed in the table cell are dependant on the information in the imdi file and needs to be made more robust</li>
+            <li>There are some cosmetic display issues on Mac</li>
+            <li>When a node is saved or reloaded the colour indicating the need to save may not update immediately</li>
+            <li>Currently it is not possible to add or drag to sub nodes of a session, this must for now be done only on the session node</li>
+            <li>Currently it is not possible delete sub nodes of a session, ie actors and resources</li>
         </ul>
         <br>
         <br>
