Added new search functionality using panels displayed above the results grid. Added check to prevent error when updating imdi icon. Added detailed tool tip for Imdi nodes including name and description. Added a list of Short Cut Keys as a html window. Added an 'are you sure' dialog when deleting nodes or removing links.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -12,6 +12,7 @@
     <body>
         <b>The following features are functional</b><br>
         <ul>
+            <li>Searching sub nodes for both text and node types (actors, sessions, etc.)</li>
             <li>Creating an off line cache of a corpus (downloading from a server)</li>
             <li>Creation of Corpus nodes</li>
             <li>Creation of Session nodes</li>
@@ -36,6 +37,10 @@
         <br>        
         <b>The following bugs have been recently resolved</b><br>
         <ul>            
+            <li>Added new search functionality using panels displayed above the results grid.</li>
+            <li>Added detailed tool tip for Imdi nodes including name and description.</li>
+            <li>Added a list of Short Cut Keys as a html window.</li>
+            <li>Added an 'are you sure' dialog when deleting nodes or removing links.</li>
             <li>When there is no network local imdi files will be loaded as a priority</li>
             <li>Corrected separate errors when removing working directories and corpus links</li>
         </ul>
@@ -71,9 +76,10 @@
             <li>When a node is saved or reloaded the colour indicating the need to save may not update immediately</li>
             <li>Currently it is not possible to add or drag to sub nodes of a session, this must for now be done only on the session node</li>
             <li>Currently it is not possible delete sub nodes of a session, ie actors and resources</li>
+            <li>Table columns are not yet correctly sized</li>
         </ul>
         <br>
         <br>
-            features / bugs jar version
+        features / bugs jar version
     </body>
 </html>
