Updated the features / bugs list. The features html file has been limited to the version in the jar (not the server), so that it is specific to the version of linorg in the jar.

--- a/resources/html/ShortCutKeys.html
+++ b/resources/html/ShortCutKeys.html
@@ -29,6 +29,10 @@
                     <td>enter (in the tree)</td>
                     <td>open the current tree selection in a table</td>
                 </tr>
+                <tr>
+                    <td>ctrl p</td>
+                    <td>hide / show the selection preview</td>
+                </tr>
             </tbody>
         </table>
     </body>
