Updated the features / bugs list.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -35,6 +35,7 @@
             <li>When a node is different to the version on the server it will have a blue exclamation mark in front of its icon</li>
             <li>Resource files can be added to a session by either dragging or manually entering the details</li>
             <li>The user is suggested to save changes if any exist before the application exits</li>
+            <li>User tool to check an IMDI file for conformance to the IMID file format.</li>
         </ul>
         <br>        
         <b>The following bugs have been recently resolved</b><br>
