Updated the features / bugs and short cut keys list.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -72,6 +72,7 @@
         <br>        
         <b>The following are known issues and areas under development</b><br>
         <ul>
+            <li>local repository of actors "project"-info etc. that can be quickly added to a new session is not yet implemented</li>
             <li>Menus need to be generalised so that all functions available in relevant contexts.</li>
             <li>Edit menu needs to be populated with the generalised menu</li>
             <li>Templates functionality needs to be completed and enabled</li>
