Added ability to paste into tables. The data must be in the correct format and only matching field names will be pasted.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -12,6 +12,9 @@
     <body>
         <b>The following features are functional</b><br>
         <ul>
+            <li>Fields can be copied from a table containing a single IMDI file and then pasted into the selected rows of any table (only matching field names will be pasted).</li>
+            <li>The data copied from a table can be edited in an external editor and then pasted back into a table provided that it remains in the correct format.</li>
+            <li>IMDI Session nodes or sub node of a Session can be flagged as a template. These templates then can be used to add new nodes via the "Add From Template" menu.</li>
             <li>Searching sub nodes for both text and node types (corpus, actors, sessions, etc.) using multiple 'and', 'or', 'not' boolean parameters</li>
             <li>Creating an off line cache of a corpus (downloading from a server)</li>
             <li>Creation of Corpus nodes</li>
