Added more help pages.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -43,6 +43,8 @@
         <br>        
         <b>The following bugs have been recently resolved</b><br>
         <ul>
+            <li>Multiple fields with the same name are now correclty shown</li>
+            <li>The multi line fields can be easily edited</li>
             <li>Search has been completed and now offers more options</li>
             <li>Corrected the sizing of columns in tables.</li>
             <li>Corrected the redraw of data in tables.</li>
@@ -94,8 +96,7 @@
             <li>Webstart occasionally gives an error that it can't find jar files when the internet connection is slow</li>
 <!--            <li>Save changes on exit and from file menu needs to be added</li>-->
 <!--            <li>Adding a node reloads sibling nodes without saving any changes</li>-->
-            <li>Multiple fields with the same name will not all be shown</li>
-            <li>The multi line fields cannot be easily edited yet</li>
+
 <!--            <li>Search has been disabled because it will be revamped in the near future</li>-->
 <!--            <li>Table column width is not always set correctly</li>-->
             <li>The right click menu is about to be updated which will populate the edit menu and add copy paste functions where applicable</li>
