Added more detail to the help pages. Added an application icon. Updated some icons. Updated the help to open to the introduction page when there are no local corpus nodes. Corrected table update when merging nodes from a template.

--- a/resources/html/help/2. Where do I start.html
+++ b/resources/html/help/2. Where do I start.html
@@ -10,20 +10,33 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        You can either start by adding to a copy of an existing corpus branch 
-        on the server or you can create an unattached corpus branch to work in.<br>
+        You can either start by creating an unattached corpus branch which can 
+        later be added to a corpus branch on the server or by making a copy of 
+        an existing corpus branch from the server. Either way, the files you 
+        create or edit will be on your computer not on the server. The changes 
+        or additions you make will only get to the server after you have 
+        uploaded them via Lamus.<br>
         <br>
-        To start working in an existing corpus you will need to select the 
-        required branch in the "Remote Corpus" tree and make an off line copy 
-        via the menu "Copy Branch to Offline Cache". The branch will then be copied
-        into the "Local Corpus" tree. Once this is done you can work within the 
-        "Local Corpus" tree adding new corpus branches or sessions, adding 
-        resource files and adding new or editing existing metadata.<br>
+        <img align="center" src="../../icons/server16x16.png">
+        The Remote Corpus Tree is read only and is for viewing live data from 
+        the servers. It is from here that you can make an off line copy of an
+        existing corous branch.<br>
         <br>
-        To work in a new unattached corpus you will need to add a new corpus
-        in the "Local Corpus" tree. This is done by selecting the "Local Corpus"
+        <img align="center" src="../../icons/directory16x16.png">
+        The Local Corpus Tree contains local files that you can create or edit.
+        It is here that any off line copies that you make can be accessed.<br>
+        <br>
+        Creating a new unattached corpus is done by selecting the "Local Corpus" 
         tree and via the menu selecting "add/corpus". Once this is done you can 
         work within the newly created corpus adding new sessions etc..<br>
+        <br>
+        If you wish to start working in an existing corpus on of the servers you 
+        will need to select the required branch in the "Remote Corpus" tree and make 
+        an off line copy via the menu "Copy Branch to Offline Cache". The branch will 
+        then be copied into the "Local Corpus" tree. Once this is done you can work 
+        within the "Local Corpus" tree adding new corpus branches or sessions, adding 
+        resource files and adding new or editing existing metadata.<br>
+        <br>
     </body>
 </html>
 <!--
