Enabled the delete action on the local corpus cache nodes. Added function to delete imdi sub nodes. Added check for jtree to make sure that all nodes are removed when required. Corrected add/remove tree node process. Reduced some concurrency issues. Made the search more robust when handling huge numbers of results. Added Templates menu based on the templates directory. Changed the naming of templates to favourites because the file templates are now also in use. Added large arbil icon. When an Imdi is deleted favourites and tables are now tidied up. Added additional templates.

--- a/resources/html/help/Lamus/Uploading to the corpus server.html
+++ b/resources/html/help/Lamus/Uploading to the corpus server.html
@@ -14,7 +14,7 @@
         and file formats before anything can be added to the archive. For this reason
         once you have changes or new data ready you must upload it to the server via Lamus.<br>
         <br>
-        The integration between Linorg and Lamus is in its early stages and for now
+        The integration between Arbil and Lamus is in its early stages and for now
         you will need to export the modified files to then upload into Lamus.<br>
         <br>
         To export you changes select the modified nodes and via the mouse menu
