Enabled the delete action on the local corpus cache nodes. Added function to delete imdi sub nodes. Added check for jtree to make sure that all nodes are removed when required. Corrected add/remove tree node process. Reduced some concurrency issues. Made the search more robust when handling huge numbers of results. Added Templates menu based on the templates directory. Changed the naming of templates to favourites because the file templates are now also in use. Added large arbil icon. When an Imdi is deleted favourites and tables are now tidied up. Added additional templates.

--- a/resources/html/help/Icons.html
+++ b/resources/html/help/Icons.html
@@ -10,12 +10,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        The icons displayed in Linorg are usually a combination of the following <br>
+        The icons displayed in Arbil are usually a combination of the following <br>
         which indicates the state, type and location of a file or IMDI component.<br>
         They are as follows:<br>
         <table border="0" cellpadding="2">
             <tr><td><img align="center" src="../../icons/server16x16.png"></td><td>The top node of the Remote Corpus Tree (read only)<td></td>
             <tr><td><img align="center" src="../../icons/directory16x16.png"></td><td>The top node of the Local Corpus Tree (contains local files)<td></td>
+            <tr><td><img align="center" src="../../icons/computer16x16.png"></td><td>Top node of the Working Directories tree (short cuts to files on the local computer)<td></td>
             <tr><td><img align="center" src="../../icons/local.png"></td><td>The file is in the Local Corpus Tree (local file)<td></td>
             <tr><td><img align="center" src="../../icons/remote.png"></td><td>The file is on a remote server (read only)<td></td>
             <tr><td><img align="center" src="../../icons/corpusnode_color.png"></td><td>Corpus branch<td></td>
