--- a/resources/html/help/1. Arbil.html
+++ b/resources/html/help/1. Arbil.html
@@ -10,10 +10,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        Linorg is an application for arranging research material and associated
+        Arbil is an application for arranging research material and associated
         metadata into a format appropriate for archiving.<br>
         <br>
-        Linorg is designed so that it can be used off line in remote locations.
+        Arbil is designed so that it can be used off line in remote locations.
         The data can be entered at any stage in part or as a whole. When an 
         internet connection is available the work can then be transferred to 
         the main archive via Lamus.<br>
