--- a/resources/html/help/2. Where do I start.html
+++ b/resources/html/help/2. Where do I start.html
@@ -20,7 +20,7 @@
         <img align="center" src="../../icons/server16x16.png">
         The Remote Corpus Tree is read only and is for viewing live data from 
         the servers. It is from here that you can make an off line copy of an
-        existing corous branch.<br>
+        existing corpus branch.<br>
         <br>
         <img align="center" src="../../icons/directory16x16.png">
         The Local Corpus Tree contains local files that you can create or edit.
