--- a/resources/html/help/Icons.html
+++ b/resources/html/help/Icons.html
@@ -14,8 +14,8 @@
         which indicates the state, type and location of a file or IMDI component.<br>
         They are as follows:<br>
         <table border="0" cellpadding="2">
-            <tr><td><img align="center" src="../../icons/server16x16.png"></td><td>The top node of the Remote Corpus Tree (read only)<td></td>
-            <tr><td><img align="center" src="../../icons/directory16x16.png"></td><td>The top node of the Local Corpus Tree (contains local files)<td></td>
+            <tr><td><img align="center" src="../../icons/server16x16.png"></td><td>The top node of the Remote Corpus tree (read only)<td></td>
+            <tr><td><img align="center" src="../../icons/directory16x16.png"></td><td>The top node of the Local Corpus tree (contains local files)<td></td>
             <tr><td><img align="center" src="../../icons/computer16x16.png"></td><td>Top node of the Working Directories tree (short cuts to files on the local computer)<td></td>
             <tr><td><img align="center" src="../../icons/local.png"></td><td>The file is in the Local Corpus Tree (local file)<td></td>
             <tr><td><img align="center" src="../../icons/remote.png"></td><td>The file is on a remote server (read only)<td></td>
@@ -29,7 +29,7 @@
             <tr><td><img align="center" src="../../icons/pictures.png"></td><td>Image resource<td></td>
             <tr><td><img align="center" src="../../icons/question-red.png"></td><td>Archivable file of an unknown type<td></td>
             <tr><td><img align="center" src="../../icons/file.png"></td><td>File that is not an archivable format and hence cannot be added as a resource<td></td>          
-            <tr><td><img align="center" src="../../icons/template.png"></td><td>The node has been added to the list of templates and can be duplicated via the templates add menu<td></td>
+            <tr><td><img align="center" src="../../icons/favourites.png"></td><td>The node has been added to the list of favourites and can be duplicated via the favourites add menu<td></td>
             <tr><td><img align="center" src="../../icons/exclamation-blue.png"></td><td>The IMDI file has been saved to disk but the changes have not been sent to the server<td></td>
             <tr><td><img align="center" src="../../icons/exclamation-red.png"></td><td>The IMDI file has been edited but the changes have not been saved to disk<td></td>
             <tr><td><img align="center" src="../../icons/tick-blue.png"></td><td>The resource file is contained within the local cache<td></td>
