--- a/resources/html/help/Lamus/Uploading to the corpus server.html
+++ b/resources/html/help/Lamus/Uploading to the corpus server.html
@@ -6,19 +6,48 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
     <head>
-        <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <STYLE TYPE="text/css">
+            <!--
+            .helpTitle
+            {
+                text-align: center;
+                font-size:125%;
+                background: #ede2cd;
+                margin:0;
+                padding:0;
+            }
+            .helpText
+            {
+                color:Black;
+                font-family:Arial,Helvetica,sans-serif;
+                font-size:100%;
+                font-size-adjust:none;
+                font-style:normal;
+                font-variant:normal;
+                font-weight:normal;
+                line-height:1.25em;
+                background: #F4F1EB;
+            }
+            -->
+        </STYLE>
     </head>
-    <body>
-        Lamus is the gate keeper to the archive, it is required to validate all data 
-        and file formats before anything can be added to the archive. For this reason
-        once you have changes or new data ready you must upload it to the server via Lamus.<br>
-        <br>
-        The integration between Arbil and Lamus is in its early stages and for now
-        you will need to export the modified files to then upload into Lamus.<br>
-        <br>
-        To export you changes select the modified nodes and via the mouse menu
-        select export. You will then be offered a location dialog to chose the 
-        location on your computer to export the files.<br>
+    <body class="helpText">
+        <table border="0" cellpadding="10" cellspacing="0">
+            <tr class="helpTitle"><td width="100%">Uploading to the corpus server</td><td><img src="../../../icons/arbil32x32.png">
+            </td></tr>
+            <tr><td height="100%" colspan="2" class="helpText">
+                    In order to upload your changes to the corpus server you must 
+                    first export to disk then upload via Lamus.<br>
+                    To export your new sessions and other changes, select the 
+                    modified nodes or a branch that contains them all and 
+                    via the mouse menu select export.
+                    You will then be offered a location dialog to choose a 
+                    location on your computer to export the files to.<br>
+                    Lamus is then used to upload the exported files to the server. 
+                    This process validates all data and file formats before 
+                    anything is added to the archive.<br>
+            </td></tr>
+        </table>
     </body>
 </html>
