Separated the main context menu into a separate class for use by other components. Made sure guihelper is used as a single instance. Made sure treehelper is used as a single instance. Prevented error when showing the table cell menu for the first time. Made a sample help page look pretty. Updated help text and organised help structure. Reduced Vector usage. Set table title to imdi name when in single imd view. Updated node icons when saved from the file menu. Added drag drop to move session and corpus branch between different corpus branches. Added shift tab to go up a row in the single node table view. Added a cache to store the image thumbnails in memory so that scrolling through images is faster. Added selection listeners so that the table and images share a common selection and are scrolled to when the selection changes. Added drag drop of sessions and corpus branches to and from corpus branches. Improved the speed of reloading of the ImdiTable data.

--- a/resources/html/help/Templates_and_Favourites/Templates.html
+++ b/resources/html/help/Templates_and_Favourites/Templates.html
@@ -37,7 +37,9 @@
             <tr class="helpTitle"><td width="100%">Templates</td><td><img src="../../../icons/arbil32x32.png">
             </td></tr>
             <tr><td height="100%" colspan="2" class="helpText">
-  
+                Templates can be selected in the "Options/Templates" menu.
+                (not available in the current stable version of Arbil) 
+                
             </td></tr>
         </table>
     </body>
