Separated the main context menu into a separate class for use by other components. Made sure guihelper is used as a single instance. Made sure treehelper is used as a single instance. Prevented error when showing the table cell menu for the first time. Made a sample help page look pretty. Updated help text and organised help structure. Reduced Vector usage. Set table title to imdi name when in single imd view. Updated node icons when saved from the file menu. Added drag drop to move session and corpus branch between different corpus branches. Added shift tab to go up a row in the single node table view. Added a cache to store the image thumbnails in memory so that scrolling through images is faster. Added selection listeners so that the table and images share a common selection and are scrolled to when the selection changes. Added drag drop of sessions and corpus branches to and from corpus branches. Improved the speed of reloading of the ImdiTable data.

--- a/resources/html/help/External_Editors/Copy paste to and from spread sheets.html
+++ b/resources/html/help/External_Editors/Copy paste to and from spread sheets.html
@@ -37,14 +37,17 @@
             <tr class="helpTitle"><td width="100%">Copy paste to and from spread sheets</td><td><img src="../../../icons/arbil32x32.png">
             </td></tr>
             <tr><td height="100%" colspan="2" class="helpText">
-                Copy and paste can be used to move data from the application to 
-                external editors and then back into the application.<br>
-                When copying from a table the format of the data will depend on 
-                what is selected. If multiple IMDI rows are selected and copied 
-                the data format cannot be pasted back into the application,
-                however it can still be viewed and edited in the external editor.<br>
-                If fields from a single IMDI are copied then it can then be pasted 
-                back into the application, providing the data maintains the same formatting.
+                Copy and paste can be used to move data from Arbil to 
+                external editors such as a spread sheet or a text editor 
+                and then back into Arbil.<br>
+                When copying data from a table the format of the copied data will depend on 
+                what is selected; If multiple IMDI rows in a table are selected and copied 
+                the data format cannot be pasted back into Arbil,
+                however it can still be viewed and edited in an external editor.<br>
+                If cells in a table corresponding to a single IMDI are copied, then 
+                the data will be in a format that can then be pasted back into any 
+                table in Arbil, provided that the data maintains the same formatting.
+                For more information refer to "Copy paste between tables".
             </td></tr>
         </table>
     </body>
