Added testing application icon. Updated the help files. Sorted the table column order by the field order in the IMDI file. Added more information in the output of the import dialog. Added drag drop to sub nodes of a session. Prevented the display of history nodes from an IMDI file. Enabled table long field edit from inside an editing cell.

--- a/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -61,8 +61,12 @@
                     <td>hide / show the selection preview</td>
                 </tr>
                 <tr>
-                    <td>ctrl key down (when initiating an edit of a table cell)</td>
-                    <td>to edit as a long field</td>
+                    <td>ctrl enter (when initiating a table cell edit via the keyboard)</td>
+                    <td>to edit a table cell in a long field editor</td>
+                </tr>
+                <tr>
+                    <td>ctrl mouse click (when initiating a table cell edit via via the mouse)</td>
+                    <td>to edit a table cell in a long field editor</td>
                 </tr>
                 <tr>
                     <td>delete key</td>
