Updated xsd checker to try getting the xsd from the server before using the one in the jar. Corrected dragging from the local corpus root node. Added catch around potential tree sort issue. Prevented dragging a tree node into itself. Added the mime type as a field for local files. Added a warning when a mime type is not found in a relevant controlled vocabulary while adding resources. Corrected error loading imdi sub nodes into a table at start up. Added the exif tags as fields in a loose image file nodes. Corrected error displaying the drop down for a controlled vocabularies in a table cell when it is an open CV. Corrected issue with table cell dropdown focus and end-edit for both open and closed CVs. Updated the help format. Centralised the help window title string. Added IMDI_3_0_9.xsd from the server to the jar file.

--- a/resources/html/Features.html
+++ b/resources/html/Features.html
@@ -1,7 +1,7 @@
 <!-- 
     Document   : Features.html
     Created on : Dec 8, 2008, 10:42:06 AM
-    Author     : petwit
+    Author     : Peter.Withers@mpi.nl
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
