--- a/resources/html/HelpTemplate.html
+++ b/resources/html/HelpTemplate.html
@@ -34,6 +34,7 @@
         </STYLE>
     </head>
     <body class="helpText">
+        :::insertable:::
         <table border="0" cellpadding="10" cellspacing="0">
             <tr class="helpTitle"><td width="100%">:::insertabletitle:::</td><td><img src="../../icons/arbil32x32.png">
             </td></tr>
@@ -41,5 +42,6 @@
                     :::insertablebody:::
             </td></tr>
         </table>
+        :::insertable:::
     </body>
 </html>
